--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 alembic==1.4.2
+beautifulsoup4==4.9.0
 blinker==1.4
+bs4==0.0.1
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
@@ -26,6 +28,7 @@ python-editor==1.0.4
 requests==2.23.0
 requests-oauthlib==1.3.0
 six==1.14.0
+soupsieve==2.0
 SQLAlchemy==1.3.17
 SQLAlchemy-Utils==0.36.5
 urllib3==1.25.9
